--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         
                 <div class="flexCon">
                 <ul class="flexCon">
-                    <li >
+                    <li id="Hame">
                         <a >Home</a>
                     </li>
-                    <li>
+                    <li >
                         <a >About</a>
                     </li>
                     <li>
@@ -57,7 +57,7 @@
                     </li>
                 </ul>
         
-                <form class="flexCon">
+                <form class="flexCon" id="Form">
                     <div >
                         <input>
                     </div>
