--- a/About.html
+++ b/About.html
@@ -4,15 +4,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="index.css">
-<title>Corporate 1a</title>
+<title>About 1a</title>
 </head>
 <body>
     <header>
         <nav class="flexboxTop">
             <!-- Logo -->
             <div id="logo">
-                <div>
-                    <a>&#x1F525;</a>
+                <div  href="#">
+                    <a>&#x1F525</a>
                     <a  href="#" class="colorless"> Logo</a>
                 </div>
             </div>
@@ -30,7 +30,7 @@
             </div>
             <!-- Services -->
             <div id="serviceList" class="hideTo800px">
-                Services &#9660;
+                Services &#9660
                 <ul id="sandwich">
                     <li>
                         <a >Engage</a>
@@ -128,19 +128,19 @@
     <footer>
             <div id="footerGrid" class="firstContainerFoot">
                 <div class="containfirstContainererElementsFoot footerElementContainer">
-                    <img  src="/images/100x100.svg" alt="1" width="100" height="100">
+                    <img  src="/images/100x100.svg" width="100" height="100">
                     <h3 class="footerH3">Dynamically Procrastinate</h3>
                     <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                     <p><a class="fooyterButttonDiv" href="#">Procrastinate</a></p>
                 </div>
                 <div class="containfirstContainererElementsFoot footerElementContainer">
-                    <img src="/images/100x100.svg" alt="1" width="100" height="100">
+                    <img src="/images/100x100.svg" width="100" height="100">
                     <h3 class="footerH3">Efficiently Unleash</h3>
                     <p>Dramatically maintain clicks-and-mortar solutions without functional solutions. Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. </p>
                     <p><a class="fooyterButttonDiv" href="#">Unleash</a></p>
                 </div>
                 <div class="footerElementContainer">
-                    <img src="/images/100x100.svg" alt="1" width="100" height="100">
+                    <img src="/images/100x100.svg" width="100" height="100">
                     <h3 class="footerH3">Completely Synergize</h3>
                     <p>Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
                     <p><a class="fooyterButttonDiv" href="#">Synergize</a></p>
